Minor style changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "foundation_and_overrides";
 /* Add imports of custom sass/scss files here */
-.row{
-  max-width: 100%;
+body {
+  margin: 1em;
+  line-height: 1.5em;
 }
