--- a/app/views/search/stupid.haml
+++ b/app/views/search/stupid.haml
@@ -1,7 +1,9 @@
-%h1 Production Versions
+.row
+  .small-12.columns
+    %h1 Production Versions
 - @pulls.each do |pull|
   .row
-    .large-6.columns
+    .small-12.large-6.columns
       = link_to pull["title"], main_app.version_path(:id => pull["number"].to_s)
-    .large-6.columns
-      =pull["merged_at"]
+    .small-12.large-6.columns
+      =DateTime.parse(pull['merged_at']).strftime('%m/%d/%Y // %I:%M%p')
