--- a/app/views/search/stupid.haml
+++ b/app/views/search/stupid.haml
@@ -1,9 +1,12 @@
 .row
   .small-12.columns
-    %h1 Production Versions
+    %h1 CBMTN Deployments
 - @pulls.each do |pull|
-  .row
-    .small-12.large-6.columns
-      = link_to pull["title"], main_app.version_path(:id => pull["number"].to_s)
-    .small-12.large-6.columns
-      =DateTime.parse(pull['merged_at']).strftime('%m/%d/%Y // %I:%M%p')
+  .row.commit
+    .small-3.large-3.columns
+      = image_tag(pull["user"]["avatar_url"], class: 'gravatar')
+      = pull["user"]["login"]
+    .small-9.large-6.columns
+      = link_to pull['title'], main_app.version_path(:id => pull['number'].to_s)
+    .small-12.large-3.columns
+      = DateTime.parse(pull['merged_at']).strftime('%m/%d/%Y // %I:%M%p')
