Style JobSearch section, too

--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -7,7 +7,7 @@
     %h4
       Deployment title:
       %span.no-bold
-        = @thispull["title"]
+        = @thispull['title']
 
 .row
   .small-12.columns
@@ -15,21 +15,24 @@
 - @commits.each do |commit|
   .row.commit
     .small-3.columns
-      - unless commit["author"].nil?
-        = image_tag(commit["author"]["avatar_url"], class: 'gravatar')
+      - unless commit['author'].nil?
+        = image_tag(commit['author']['avatar_url'], class: 'gravatar')
       - else
         = image_tag('https://i2.wp.com/a248.e.akamai.net/assets.github.com/images/gravatars/gravatar-user-420.png', class: 'gravatar')
       = commit['commit']['author']['name']
     .small-9.columns
-      = link_to commit['commit']['message'], commit['html_url']
+      = link_to commit['commit']['message'], commit[:html_url]
 
 
 .row
   .small-12.columns
     %h2 Changes to JobSearch
 - @jobsearch_changes.each do |change|
-  .row
-    .small-12.columns
+  .row.commit
+    .small-3.columns
+      = image_tag(change[:user]['avatar_url'], class: 'gravatar')
+      = change[:user]['login']
+    .small-9.columns
       = link_to change[:title], change[:url]
 - if @jobsearch_changes.count == 0
   .row
