--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
     - else
       %title= yield(:title)
     = stylesheet_link_tag 'application', media: 'all'
-    %link{ href: '//fonts.googleapis.com/css?family=Lato:400,700', rel: 'stylesheet', type: 'text/css' }
+    %link{ href: 'http://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|Raleway', rel: 'stylesheet', type: 'text/css' }
     = csrf_meta_tags
     = yield :head
   %body
