--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -14,32 +14,32 @@
 
 %br
 .row
-  .small-12.columns
+  .small-12.columns.back-link
     = link_to 'Back to all deployments', main_app.deployments_path
 
 .row
   .small-12.columns
-    %h2 Changes to CB-Mobile
+    %h2.repo-header Changes to CB-Mobile
 - @commits.each do |commit|
   .row.commit
-    .small-3.columns
+    .small-12.large-3.columns
       - unless commit['author'].nil?
         = image_tag(commit['author']['avatar_url'], class: 'gravatar')
       - else
         = image_tag('https://i2.wp.com/a248.e.akamai.net/assets.github.com/images/gravatars/gravatar-user-420.png', class: 'gravatar')
       = commit['commit']['author']['name']
-    .small-9.columns
+    .small-12.large-9.columns.commit-message
       = link_to commit['commit']['message'], commit[:html_url]
 
 .row
   .small-12.columns
-    %h2 Changes to JobSearch
+    %h2.repo-header Changes to JobSearch
 - @jobsearch_changes.each do |change|
   .row.commit
-    .small-3.columns
+    .small-12.large-3.columns
       = image_tag(change[:user]['avatar_url'], class: 'gravatar')
       = change[:user]['login']
-    .small-9.columns
+    .small-12.large-9.columns.commit-message
       = link_to change[:title], change[:url]
 - if @jobsearch_changes.count == 0
   .row
