--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "foundation_and_overrides";
 /* Add imports of custom sass/scss files here */
 body {
-  margin: 1em;
+  margin: 1em 0;
   line-height: 1.5em;
   font-family: 'Raleway', sans-serif;
 }
