Make deployments more mobile friendly

--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -14,7 +14,7 @@
 
 %br
 .row
-  .small-12.columns.back-link
+  .small-12.columns.end-of-header
     = link_to 'Back to all deployments', main_app.deployments_path
 
 .row
