--- a/app/views/version/dashboard.html.haml
+++ b/app/views/version/dashboard.html.haml
@@ -2,18 +2,15 @@
   .small-12.columns
     %h1 CBMTN Deployments
 .row.commit
-  .small-3.large-3.columns
-    Deployer
-  .small-9.large-6.columns
-    Title
-  .small-12.large-3.columns
-    Deployment Started
+  .small-12.columns.end-of-header
+    Deployer / Title / Deployment Started
+%br
 - @pulls.each do |pull|
   .row.commit
-    .small-3.large-3.columns
+    .small-12.large-3.columns
       = image_tag(pull["user"]["avatar_url"], class: 'gravatar')
       = pull["user"]["login"]
-    .small-9.large-6.columns
+    .small-12.large-6.columns.deployment-message
       = link_to pull['title'], main_app.version_path(:id => pull['number'].to_s)
-    .small-12.large-3.columns
+    .small-12.large-3.columns.deployment-time
       = DateTime.parse(pull['merged_at']).in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
