--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -3,14 +3,11 @@
     %h1 ChangeLog
 .row
   .small-12.columns
-    Deployment title:
-    %span
-      = @thispull['title']
+    = @thispull['title']
 .row
   .small-12.columns
-    Date/time:
-    %span
-      = DateTime.parse(@thispull['merged_at']).in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
+    Deployment started
+    = DateTime.parse(@thispull['merged_at']).in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
 
 %br
 .row
