--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -37,7 +37,7 @@
       = image_tag(change.user.avatar_url, class: 'gravatar')
       = change.user.login
     .small-12.large-9.columns.commit-message
-      = link_to change.title, change.url
+      = link_to change.title, change.html_url
 - if @jobsearch_changes.count == 0
   .row
     .small-12.columns
