--- a/app/views/search/compare.html.haml
+++ b/app/views/search/compare.html.haml
@@ -1,7 +1,7 @@
 =render "searchform"
 .row
   .large-6.columns
-    - @apiresponseleft["JobSearchResult"].each do |jobresult|
+    - @view_data.left_side_results["JobSearchResult"].each do |jobresult|
       .row.job-row
         .large-6.columns
           = link_to jobresult["JobTitle"], jobresult["JobDetailsURL"]
@@ -12,7 +12,7 @@
         .large-2.columns
           =jobresult["PostedDate"]
   .large-6.columns
-    - @apiresponseright["JobSearchResult"].each do |jobresult|
+    - @view_data.right_side_results["JobSearchResult"].each do |jobresult|
       .row.job-row
         .large-6.columns
           = link_to jobresult["JobTitle"], jobresult["JobDetailsURL"]
