--- a/app/views/version/dashboard.html.haml
+++ b/app/views/version/dashboard.html.haml
@@ -5,7 +5,7 @@
   .small-12.columns.end-of-header
     Deployer / Title / Deployment Started
 %br
-- @pulls.each do |pull|
+- @view_data.pulls.each do |pull|
   .row.commit
     .small-12.large-3.columns
       = image_tag(pull.user.avatar_url, class: 'gravatar')
