--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -3,11 +3,11 @@
     %h1 ChangeLog
 .row
   .small-12.columns
-    = @thispull.title
+    = @view_data.this_pull.title
 .row
   .small-12.columns
     Deployment started
-    = @thispull.merged_at.in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
+    = @view_data.this_pull.merged_at.in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
 
 %br
 .row
@@ -17,7 +17,7 @@
 .row
   .small-12.columns
     %h2.repo-header Changes to CB-Mobile
-- @commits.each do |commit|
+- @view_data.commits.each do |commit|
   .row.commit
     .small-12.large-3.columns
       - unless commit.author.nil?
@@ -31,7 +31,7 @@
 .row
   .small-12.columns
     %h2.repo-header Changes to JobSearch
-- @jobsearch_changes.each do |change|
+- @view_data.jobsearch_changes.each do |change|
   .row.commit
     .small-12.large-3.columns
       = image_tag(change.user.avatar_url, class: 'gravatar')
