--- a/app/views/version/index.html.haml
+++ b/app/views/version/index.html.haml
@@ -38,7 +38,7 @@
       = change.user.login
     .small-12.large-9.columns.commit-message
       = link_to change.title, change.html_url
-- if @jobsearch_changes.count == 0
+- if @view_data.jobsearch_changes.count == 0
   .row
     .small-12.columns
       No changes
