--- a/app/views/version/dashboard.html.haml
+++ b/app/views/version/dashboard.html.haml
@@ -8,9 +8,9 @@
 - @view_data.pulls.each do |pull|
   .row.commit
     .small-12.large-3.columns
-      = image_tag(pull.user.avatar_url, class: 'gravatar')
-      = pull.user.login
+      = image_tag(pull.user_avatar, class: 'gravatar')
+      = pull.user_login
     .small-12.large-6.columns.deployment-message
-      = link_to pull.title, main_app.version_path(:id => pull.number.to_s)
+      = link_to pull.title, main_app.version_path(:id => pull.pull_number.to_s)
     .small-12.large-3.columns.deployment-time
-      = pull.merged_at.in_time_zone("Eastern Time (US & Canada)").strftime('%m/%d/%Y | %I:%M %p EST')
+      = pull.merged_at
