removing a font and adding robots blocking

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 h1, h2 {
-  font-family: 'Shadows Into Light Two', cursive;
+  font-family: cursive;
 }
 h3, h4, h5, h6 {
   font-family: 'Raleway', sans-serif;
