--- a/app/views/deployments/dashboard.html.haml
+++ b/app/views/deployments/dashboard.html.haml
@@ -12,6 +12,6 @@
       = image_tag(pull.user_avatar, class: 'gravatar')
       = pull.user_login
     .small-12.large-6.columns.deployment-message
-      = link_to pull.title, main_app.version_path(:pull_id => pull.pull_number.to_s)
+      = link_to pull.title, main_app.pull_request_path(:pull_id => pull.pull_number.to_s)
     .small-12.large-3.columns.deployment-time
       = pull.merged_at
