--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,5 +3,8 @@
     %h1 Home
 .row
   .small-12.columns
-    Session Token
-    = session[:token]
+    Logged in?
+    = session[:token].present?
+    - if session[:token].present?
+      = link_to image_tag(session[:avatar], class: 'gravatar'), session[:url]
+      = session[:login]
