--- a/app/views/home/_logged_in.html.haml
+++ b/app/views/home/_logged_in.html.haml
@@ -1,15 +1,12 @@
 .row
   .small-12.columns
     %h1
-      Open Pull Requests
-.row
-  .small-12.columns
-    List PRs here
-
-.row
-  .small-12.columns
-    %h1
-      Repo Browser
-.row
-  .small-12.columns
-    List Repos here
+      You're Teams
+- @teams.each do |team|
+  .row.commit
+    .small-12.large-5.columns
+      = image_tag(team.organization.avatar_url, class: 'gravatar')
+      = team.name
+    .small-12.large-7.columns.commit-message
+      = link_to 'Pull Requests', team.url
+      = link_to 'Deployment Logs', team.url
