--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,23 +1,30 @@
 !!!
-/DO NOT DELETE THE !!! this means <DOCTYPE>
-/[if lt IE 7 ] <html class="ie6" lang="en">
-/[if IE 7 ] <html class="ie7" lang="en">
-/[if IE 8 ] <html class="ie8" lang="en">
-/ [if (gte IE 9)|!(IE)]><!
-%html{lang: 'en'}
-  / <![endif]
+%html{:lang => "en"}
   %head
-    %meta{ charset: 'utf-8' }
+    %meta{:content => 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type'}/
+    %meta{:charset => 'utf-8'}/
     %meta{ content: 'width=device-width, initial-scale=1.0', name: 'viewport' }
-    - if yield(:title).blank?
-      %title CareerBuilder
-    - else
-      %title= yield(:title)
+    %title= content_for?(:title) ? yield(:title) : 'Ruby Deployments Dashboard'
     %link{ href: 'http://fonts.googleapis.com/css?family=Raleway', rel: 'stylesheet', type: 'text/css' }
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag    'application'
     = csrf_meta_tags
-    = yield :head
   %body
+    .top-bar
+      .top-bar-left
+        %ul.dropdown.menu{'data-dropdown-menu' => ''}
+          %li
+            = link_to 'Deployments Dashboard', root_path
+      .top-bar-right
+        %ul.dropdown.menu{'data-dropdown-menu' => ''}
+        - if session[:token].present?
+          %li
+            = link_to image_tag(session[:avatar], class: 'gravatar'), session[:url]
+            = session[:login]
+          %li
+            = link_to 'Sign Out', oauth_destroy_path, class: 'button'
+        - else
+          %li
+            = link_to 'Sign In', oauth_authorize_path, class: 'button'
     .main-body
       = yield
-    = javascript_include_tag "application"
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
