--- a/app/views/deployments/details.html.haml
+++ b/app/views/deployments/details.html.haml
@@ -12,9 +12,9 @@
 %br
 .row
   .small-6.columns.end-of-header
-    = link_to 'Back to all deployments', main_app.deployments_path
+    = link_to 'Back to all deployments', deployments_path
   .small-6.columns.end-of-header
-    = link_to 'Compare to previous version', "https://github.com/cbdr/#{params[:repo_name]}/pull/#{params[:pull_id]}/files"
+    = link_to 'Compare to previous version', "https://github.com/#{params[:user_name]}/#{params[:repo_name]}/pull/#{params[:pull_id]}/files"
 
 .row
   .small-12.columns
