--- a/app/views/deployments/list.html.haml
+++ b/app/views/deployments/list.html.haml
@@ -1,2 +1,17 @@
-%h1 Deployments#list
-%p Find me in app/views/deployments/list.html.haml
+.row
+  .small-12.columns
+    %h1
+      = "#{params[:repo_name]} Deployments".titlecase
+.row.commit
+  .small-12.columns.end-of-header
+    Deployer / Title / Deployment Started
+%br
+- @pulls.each do |pull|
+  .row.commit
+    .small-12.large-3.columns
+      = image_tag(pull.user_avatar, class: 'gravatar')
+      = pull.user_login
+    .small-12.large-6.columns.deployment-message
+      = link_to pull.title, deployments_details_path(pull_id: pull.pull_number)
+    .small-12.large-3.columns.deployment-time
+      = pull.merged_at
