--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,11 +22,10 @@
 }
 .gravatar {
     width: 30px;
-    border-radius: 3px;
     -webkit-box-shadow: 1px 1px 5px 2px rgba(221,221,221,1);
     -moz-box-shadow: 1px 1px 5px 2px rgba(221,221,221,1);
     box-shadow: 1px 1px 5px 2px rgba(221,221,221,1);
-    margin: 0 5px;
+    margin: 0px;
 }
 .commit {
     margin-bottom: 1em;
