--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,22 +9,7 @@
     = stylesheet_link_tag    'application'
     = csrf_meta_tags
   %body
-    .top-bar
-      .top-bar-left
-        %ul.dropdown.menu{'data-dropdown-menu' => ''}
-          %li
-            = link_to 'Deployments Dashboard', root_path
-      .top-bar-right
-        %ul.dropdown.menu{'data-dropdown-menu' => ''}
-        - if session[:token].present?
-          %li
-            = link_to image_tag(session[:avatar], class: 'gravatar'), session[:url]
-            = session[:login]
-          %li
-            = link_to 'Sign Out', oauth_destroy_path, class: 'button'
-        - else
-          %li
-            = link_to 'Sign In', oauth_authorize_path, class: 'button'
+    = render 'layouts/nav_menu'
     .main-body
       = yield
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
