Snacks and prettier

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,3 +48,12 @@
         padding-bottom: .5em;
     }
 }
+.center{
+    text-align: center;
+}
+
+.correction{
+    color: #AAA;
+    font-size: .6em;
+}
+    
