--- a/app/views/layouts/_nav_menu.html.haml
+++ b/app/views/layouts/_nav_menu.html.haml
@@ -3,7 +3,7 @@
     %ul.dropdown.menu{ 'data-dropdown-menu' => '' }
       %li.menu-text Deployments Dashboard
   - if session[:token].present?
-    .top-bar-right
+    .top-bar-left
       %ul.menu
         %li
           = link_to 'Your Teams', root_path
@@ -11,6 +11,8 @@
           = link_to 'Snacks', snacks_path
         %li
           = link_to 'Pull Requests', prs_path
+    .top-bar-right
+      %ul.menu
         %li
           = image_tag(session[:avatar], class: 'gravatar')
         %li
