fixing some links

--- a/app/views/home/_logged_in.html.haml
+++ b/app/views/home/_logged_in.html.haml
@@ -8,5 +8,4 @@
       = image_tag(team.organization.avatar_url, class: 'gravatar')
       = team.name
     .small-12.large-7.columns.commit-message
-      = link_to 'Pull Requests', team.url
-      = link_to 'Deployment Logs', team.url
+      = link_to 'Pull Requests',team_prs_path(teams: team.id)
