--- a/app/views/home/_logged_in.html.haml
+++ b/app/views/home/_logged_in.html.haml
@@ -9,5 +9,6 @@
       = team.name
     .small-12.large-7.columns.commit-message
       = link_to 'Pull Requests',team_prs_path(teams: team.id)
+      = link_to 'Repositories',repos_path(team_id: team.id)
 .row.small-12.correction
   *Your
