--- a/app/views/snacks/index.html.haml
+++ b/app/views/snacks/index.html.haml
@@ -1,2 +1,2 @@
 .center
-  %iframe{ src:"https://docs.google.com/forms/d/1J5ES-bO8IRQQhovoQLkkR3ZRWjwn6rfp_kr_pNxbvZM/viewform?embedded=true", width: "760", height: "1000", frameborder: "0", marginheight:"0", marginwidth: "0", placeholder: 'Loading...' }
+  %iframe{ src:ENV['SNACK_FORM'], width: "760", height: "1000", frameborder: "0", marginheight:"0", marginwidth: "0", placeholder: 'Loading...' }
