Usabilla feedback. For better or worse

--- a/app/views/layouts/_nav_menu.html.haml
+++ b/app/views/layouts/_nav_menu.html.haml
@@ -14,6 +14,8 @@
             = link_to 'Snacks', snacks_path
           %li
             = link_to 'Pull Requests', prs_path
+          %li
+            = link_to 'Feedback', usabilla_path
       .top-bar-right
         %ul.menu
           %li
