--- a/app/views/pull_requests/index.html.haml
+++ b/app/views/pull_requests/index.html.haml
@@ -4,8 +4,8 @@
       Pull Requests
 .row
   .accordion
-    %dt.accordion-active.commit.small-12.columns.end-of-header
-      Pull / Title / Date Opened
+    %dt.accordion-active.commit.small-12.columns
+      Team Filter
     %dd
       - @teams.each_with_index do |team, i|
         .small-12.medium-6.large-4.columns{class: (i == (@teams.size - 1) ? 'end' : '') }
@@ -13,15 +13,18 @@
           = label_tag(team.id, "#{team.organization.login} / #{team.name}")
       .large-12.columns
         %a.button.expand#filter{href: '#'} Filter
-
+.row
+  .small-12.columns.end-of-header
+    Pull / Title / Date Opened
 
 %br
 - @pulls.each do |pull|
   .row.commit
     .small-12.large-3.columns
       = image_tag(pull.user_avatar, class: 'gravatar')
-      = pull.user_login
+      = link_to pull.user_login, "https://www.github.com/#{pull.user_login}"
     .small-12.large-6.columns.deployment-message
+      = pull.repo_name
       = link_to "##{pull.pull_number} #{pull.title}", pull.url
     .small-12.large-3.columns.deployment-time
       = pull.created_at
