--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,4 +58,11 @@
     color: #999;
     font-size: .8em;
 }
+.cat_row {
+    text-align: center;
+    margin-bottom: 1em;
+}
+.cat_pix {
+    max-height: 200px;
+}
     
