--- a/app/views/usabilla/index.html.haml
+++ b/app/views/usabilla/index.html.haml
@@ -16,19 +16,28 @@
   .row.correction
     Remember, only angry people write reviews on the internet, so don't take these personally. Your mom wrote the happy ones. 
   %br
+  .row.commit
+    .small-12.large-1.columns
+      Rating
+    .small-12.large-2.columns.deployment-message
+      Date of Comment
+    .small-12.large-2.columns.page-viewed
+      Page of Comment
+    .small-12.large-6.columns.deployment-time
+      Comment
   - @feedback.items.each_with_index do |item, i|
     .row.commit
       .small-12.large-1.columns
         Rating:
         = item.rating
       .small-12.large-2.columns.deployment-message
+        = controller.reformat_date(item.date)
+        %br
         - if item.public_url.present?
-          = link_to controller.reformat_date(item.date), item.public_url
-        - else
-          = controller.reformat_date(item.date)
-      .small-12.large-2.columns.page-viewed
-        = link_to 'On This Page', item.url
-      .small-12.large-6.columns.deployment-time
+          = link_to 'View on Usabilla', item.public_url
+      .small-12.large-3.columns.page-viewed
+        = link_to item.url, item.url
+      .small-12.large-6.columns
         = item.comment
     - if (i != 0) && ((i % 11) == 0)
       .row.commit.cat_row
