--- a/app/views/layouts/_nav_menu.html.haml
+++ b/app/views/layouts/_nav_menu.html.haml
@@ -16,6 +16,8 @@
             = link_to 'Pull Requests', prs_path
           %li
             = link_to 'Feedback', usabilla_path
+          %li
+            = link_to 'Split Dashboard', 'http://m-car-ins.cbmtn.io/split'
       .top-bar-right
         %ul.menu
           %li
