--- a/app/views/pull_requests/index.html.haml
+++ b/app/views/pull_requests/index.html.haml
@@ -13,18 +13,26 @@
           = label_tag(team.id, "#{ team.organization.login } / #{ team.name }")
       .large-12.columns
         %a.button.expand#filter{href: '#'} Filter
-.row
-  .small-12.columns.end-of-header
-    Pull / Title / Date Opened
 
 %br
-- @pulls.each do |pull|
+
+- if controller.show_pr_section?
   .row.commit
     .small-12.large-3.columns
-      = image_tag(pull.user_avatar, class: 'gravatar')
-      = link_to pull.user_login, "https://www.github.com/#{pull.user_login}"
+      By:
     .small-12.large-6.columns.deployment-message
-      = pull.repo_name
-      = link_to "##{pull.pull_number} #{pull.title}", pull.url
-    .small-12.large-3.columns.deployment-time
-      = pull.created_at
+      Repo / Number / Title 
+    .small-12.large-3.columns.end-of-header
+      Date Opened
+
+
+  - @pulls.each do |pull|
+    .row.commit
+      .small-12.large-3.columns
+        = image_tag(pull.user_avatar, class: 'gravatar')
+        = link_to pull.user_login, "https://www.github.com/#{pull.user_login}"
+      .small-12.large-6.columns.deployment-message
+        = pull.repo_name
+        = link_to "##{pull.pull_number} #{pull.title}", pull.url
+      .small-12.large-3.columns.deployment-time
+        = pull.created_at
