--- a/app/views/layouts/_nav_menu.html.haml
+++ b/app/views/layouts/_nav_menu.html.haml
@@ -17,7 +17,7 @@
           %li
             = link_to 'Feedback', usabilla_path
           %li
-            = link_to 'Split Dashboard', 'http://m-car-ins.cbmtn.io/split'
+            = link_to 'Split Dashboard', 'http://m-car-ins.cbmtn.io/split', target: '_blank'
       .top-bar-right
         %ul.menu
           %li
