--- a/app/views/layouts/_nav_menu.html.haml
+++ b/app/views/layouts/_nav_menu.html.haml
@@ -17,7 +17,12 @@
           %li
             = link_to 'Feedback', usabilla_path
           %li
-            = link_to 'Split Dashboard', 'http://m-car-ins.cbmtn.io/split', target: '_blank'
+            = link_to 'External'
+            %ul.menu.vertical
+              %li
+                = link_to 'Split Dashboard', 'http://m-car-ins.cbmtn.io/split', target: '_blank'
+              %li 
+                = link_to 'Consumer Dashboard', 'http://oncall.cbmtn.io/', target: '_blank'
       .top-bar-right
         %ul.menu
           %li
