--- a/app/views/deployments/list.html.haml
+++ b/app/views/deployments/list.html.haml
@@ -10,9 +10,9 @@
         = @diff[:behind_by]
         pending production change(s)
       %br
-      %a.button#pending{href: "https://github.com/#{params[:user_name]}/#{params[:repo_name]}/compare/production...master?expand=1"} View Pending Changes
+      %a.button#pending{ href: "https://github.com/#{params[:user_name]}/#{params[:repo_name]}/compare/production...master?expand=1", target: '_blank' } View Pending Changes
       %br
-      = link_to 'Deploy to production',create_prs_path(user_name:params[:user_name],repo_name:params[:repo_name])
+      = link_to 'Deploy to production', create_prs_path(user_name:params[:user_name],repo_name:params[:repo_name]), target: '_blank'
 .row.commit
   .small-12.columns.end-of-header
     Deployer / Title / Deployment Started
