fix running locally, fix PR links, style adjustments

--- a/app/views/home/_logged_in.html.haml
+++ b/app/views/home/_logged_in.html.haml
@@ -1,7 +1,7 @@
 .row
   .small-12.columns
     %h1
-      You're Teams
+      You're* Teams
 - @teams.each do |team|
   .row.commit
     .small-12.large-5.columns
