--- a/app/views/pull_requests/index.html.haml
+++ b/app/views/pull_requests/index.html.haml
@@ -18,12 +18,8 @@
 
 - if controller.show_pr_section?
   .row.commit
-    .small-12.large-3.columns
-      By:
-    .small-12.large-6.columns.deployment-message
-      Repo / Number / Title 
-    .small-12.large-3.columns.end-of-header
-      Date Opened
+    .small-12.columns
+      Author / Repo / Title / Date Opened
 
 
   - @pulls.each do |pull|
@@ -31,8 +27,9 @@
       .small-12.large-3.columns
         = image_tag(pull.user_avatar, class: 'gravatar')
         = link_to pull.user_login, "https://www.github.com/#{pull.user_login}"
-      .small-12.large-6.columns.deployment-message
+      .small-12.large-3.columns.deployment-message
         = pull.repo_name
+      .small-12.large-3.columns.deployment-message
         = link_to "##{pull.pull_number} #{pull.title}", pull.url, target: '_blank'
       .small-12.large-3.columns.deployment-time
         = pull.created_at
