--- a/app/views/pull_requests/index.html.haml
+++ b/app/views/pull_requests/index.html.haml
@@ -4,7 +4,7 @@
       Pull Requests
 .row
   .accordion
-    %dt.accordion-active.commit.small-12.columns
+    %dt.commit.small-12.columns
       Team Filter
     %dd
       - @teams.each_with_index do |team, i|
