style and fixing tests to run again

--- a/app/views/usabilla/index.html.haml
+++ b/app/views/usabilla/index.html.haml
@@ -41,7 +41,7 @@
         = item.comment
     - if (i != 0) && ((i % 11) == 0)
       .row.commit.cat_row
-        %img.cat_pix{ src: controller.get_cat_img }
+        %img.cat_pix{ src: controller.cat_img }
 
 
   .row.correction
