--- a/app/views/usabilla/cats.html.haml
+++ b/app/views/usabilla/cats.html.haml
@@ -1,5 +1,5 @@
-- cat_count = controller.get_cat_count
+- cat_count = controller.cat_count
 
 - for i in 0..cat_count do
   .row.commit.cat_row
-    %img.cat_pix{ src: controller.get_cat_img }
+    %img.cat_pix{ src: controller.cat_img }
