--- a/app/views/home/_logged_out.html.haml
+++ b/app/views/home/_logged_out.html.haml
@@ -3,4 +3,5 @@
     %h1 Home
 .row
   .small-12.columns
-    Nothing to see here.  Try signing in first.
+    Nothing to see here.
+    = link_to 'Try signing in first.', oauth_authorize_path
