--- a/app/views/deployments/list.html.haml
+++ b/app/views/deployments/list.html.haml
@@ -26,3 +26,9 @@
       = link_to pull.title, deployments_details_path(pull_id: pull.pull_number)
     .small-12.large-3.columns.deployment-time
       = pull.merged_at
+  .row.commit
+    .small-12.large-3.columns
+      Revert to PR ##{ pull.pull_number }
+    .small-12.large-6.columns
+      git checkout production; git pull; git reset --soft #{ pull.commit }; git push -f --no-verify origin production
+    .small-12.large-3.columns
