--- a/app/views/deployments/list.html.haml
+++ b/app/views/deployments/list.html.haml
@@ -28,7 +28,7 @@
       = pull.merged_at
   .row.commit
     .small-12.large-3.columns
-      To redeploy to PR ##{ pull.pull_number }, use this command:
+      Revert PR ##{ pull.pull_number } with this command:
     .small-12.large-6.columns
-      git checkout production; git pull; git reset --soft #{ pull.commit }; git push -f --no-verify origin production
+      git checkout production; git pull; git reset --soft #{ pull.rollback_commit }; git push -f --no-verify origin production
     .small-12.large-3.columns
