--- a/app/views/home/_logged_in.html.haml
+++ b/app/views/home/_logged_in.html.haml
@@ -1,7 +1,7 @@
 .row
   .small-12.columns
     %h1
-      You're* Teams
+      Your Teams
 - @teams.each do |team|
   .row.commit
     .small-12.large-5.columns
@@ -11,5 +11,13 @@
       = link_to 'Pull Requests',team_prs_path(teams: team.id)
       |
       = link_to 'Repositories',repos_path(team_id: team.id)
-.row.small-12.correction
-  *Your
+.row
+  .small-12.columns
+    %h1
+      Other Repos
+- @repos.each do |repo|
+  .row.commit
+    .small-12.large-5.columns
+      = repo.full_name
+    .small-12.large-7.columns.commit-message
+      = link_to 'Deployment Log',deployments_path(user_name: repo[:html_url].gsub('https://github.com/','').split('/')[0] , repo_name: repo[:html_url].gsub('https://github.com/','').split('/')[1])
